tests/toylang/neg/001193_mutation.toylang
program a = { program a = { } . a then sleep; } .
